Project

General

Profile

Actions

Bug #17657

closed

Ceph / Civetweb doesn't accept Absolute URI

Added by Solaiyappan Perichiappan over 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It appears that Ceph's fork of Civetweb doesn't have the feature which supports Absolute URI. Abhishek L confirmed the same and asked me to open this bug. Following are the details:

I have been trying to use AWS Go SDK against Ceph (version 10.2.1+git.1464009581.b8ee9e4-1.1), which doesn't seems to be working properly.

From debugging, it appears that Go SDK frames the REQUEST_URI as absolute path and Ceph doesn't seems to be supporting the same. Googling around the same thing resulted in the following:

http://tracker.ceph.com/issues/12917
https://github.com/ceph/ceph/pull/7675

I could also find the respective fixes were available in the version that I am using. Following is the entry from change log:

- rgw: adjust the request_uri to support absoluteURI of http request
(issue#12917, pr#7675)

But still, things were not working properly. It appears the http front end civetweb also requires some changes.

https://github.com/civetweb/civetweb/issues/197

The status of the above issue is closed, but I did not see anything fixed / available in the version of Ceph that I am using.

Note - As a workaround, I tried with apache front end and it was working properly. I also tried with AWS Java SDK (which is framing the REQUEST_URI as relative path) against civetweb and that is working properly. It appears what AWS Go SDK is doing (framing the REQUEST_URI as absolute path) is not wrong:

https://github.com/aws/aws-sdk-go/issues/344

Actions #1

Updated by Yehuda Sadeh over 7 years ago

This should be fixed once we move to civetweb 1.8.

Actions #2

Updated by Vaibhav Bhembre over 7 years ago

This issue is critical to us at this point. Will this be backported to Jewel in the upcoming 10.2.4?

Actions #3

Updated by Abhishek Lekshmanan over 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Abhishek Lekshmanan

With civetweb 1.8 merged in, this might need a couple of patches to get working, as we need to pass in the authentication domain as a conf option as well

Actions #5

Updated by Abhishek Lekshmanan over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #6

Updated by Abhishek Lekshmanan over 6 years ago

  • Status changed from Fix Under Review to Resolved

part of Luminous 12.2.0

Actions

Also available in: Atom PDF